--- a/index.html
+++ b/index.html
@@ -46,9 +46,22 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Verity Masters</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://www.github.com/Veenessie" target="_blank"
+            >Verity Masters</a
+          >
+          and is
+          <a
+            href="https://www.github.com/Veenessie/Weather-App-Project"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a
+            href="https:/effervescent-lollipop-48f9d6.netlify.app/"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
